# xxcore

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: noise_c_target.cmake
src/: aaudio.hpp  aio.hpp  alsa_audio.hpp  alsa_udp_voice_service.hpp  audio_flow.hpp  base_audio.hpp  base_mixer.hpp  coder_audio.hpp  crypt.hpp  crypto.hpp  essu_base.hpp  essu_noise_handshake_action.hpp  essu_noise_handshake_context.hpp  essu_protocol.hpp  essu_session.hpp  flow_audio.hpp  main.cpp  net.hpp  netbsd_audio.hpp  network.hpp  noise.hpp  openbsd_audio.hpp  oss_audio.hpp  protocol.hpp  rawsio_audio.hpp  sio_audio.hpp  sio_base_audio.hpp  sndio_audio.hpp  stream_audio.hpp  unix_udp_voice_service.hpp  utils.hpp  xxcore_service.hpp
