cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

option(SNDIO "Use sndio audio interface." OFF)

set(XXCORE xxcore)

set(CMAKE_EXPORT_COMPILE_COMMANDS YES)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_COMPILER clang++)

file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

project(${XXCORE})

# Builds OPUS lib
set(OPUS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/opus)
set(OPUS_INCLUDE_DIR ${OPUS_DIR}/include)
set(OPUS_BUILD_SHARED_LIBRARY ON)
set(OPUS_VAR_ARRAYS ON)
set(OPUS_NONTHREADSAFE_PSEUDOSTACK OFF)
set(OPUS_USE_ALLOCA OFF)
add_subdirectory(${OPUS_DIR})	

# Builds CNOISE lib
set(CNOISE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/cnoise)
set(CNOISE_TESTS OFF)
add_subdirectory(${CNOISE_DIR})	

add_executable(${XXCORE} ${SRC_FILES})
target_compile_options(${XXCORE} PRIVATE -Wall -Wextra -Wpedantic -pthread -O1 -fno-inline-functions -g)
target_include_directories(
    ${XXCORE}
    PUBLIC 
    src/
    ${BOOST_INCLUDE_DIR}
    ${OPUS_INCLUDE_DIR}
    ${CNOISE_INCLUDE_DIR}
)
target_link_libraries(
    ${XXCORE}
    PRIVATE
    Opus::opus
    cnoise 
)

if(SNDIO AND (LINUX OR BSD))
	find_library(LIBSNDIO NAMES sndio)
        if("${LIBSNDIO}" STREQUAL "LIBSNDIO-NOTFOUND")	
		message(FATAL_ERROR "[sndio] lib was not found.")
	endif()
	
	message(STATUS "Building with sndio.")
	target_link_libraries(${XXCORE} PRIVATE ${LIBSNDIO})
	target_compile_options(${XXCORE} PRIVATE "-DSNDIO")
elseif(LINUX)
	find_package(ALSA)
	
    set(AUDIO_SYSTEM "ALSA")
    target_link_libraries(${XXCORE} PRIVATE ALSA::ALSA)
	target_compile_options(${XXCORE} PRIVATE "-DALSA")
elseif(BSD)
	message(STATUS "Building with ${CMAKE_SYSTEM_NAME} audio.")
	if(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
		target_compile_options(${XXCORE} PRIVATE "-DFREEBSD_AUDIO")
	elseif(CMAKE_SYSTEM_NAME STREQUAL "OpenBSD")
		target_compile_options(${XXCORE} PRIVATE "-DOPENBSD_AUDIO")
	elseif(CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
		target_compile_options(${XXCORE} PRIVATE "-DNETBSD_AUDIO")
	endif()
endif()
